app.toolbar.css fix overflows in narrow window

--- a/static/app.toolbar.css
+++ b/static/app.toolbar.css
@@ -10,20 +10,29 @@
      and https://bugs.chromium.org/p/chromium/issues/detail?id=578799 */
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
   font-size: 13px;
-  height: 38px;
+  grid-template-rows: 38px;
+  overflow: hidden;
   -webkit-app-region: drag;
   background: -webkit-linear-gradient(top, #ebebeb, #d5d5d5);
   border-bottom: 1px solid #a6a6a6;
   transition: opacity 0.2s ease-out;
   opacity: 0;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 1fr auto minmax(max-content, 1fr);
   grid-column-gap: 5px;
   align-items: center;
 }
 .toolbar:hover > .toolbararea {
   transition: opacity 0.12s ease-in;
   opacity: 1;
+}
+
+/* Place an invisible block where the macOS .windowbuttons are going to be
+ * to push the title text away on very small windows */
+._macOS .toolbar > .toolbararea::before {
+  display: block;
+  width: 80px;
+  content: ' ';
 }
 
 .toolbar .windowbuttons {
@@ -69,9 +78,14 @@
   display: inline;
 }
 
+.toolbar img {
+  -webkit-user-drag: none;
+}
+
 .toolbar .filename {
   color: #676767;
   grid-column-start: 2;
+  max-height: 30px;
   cursor: default;
 }
 
